--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Militar News</title>
+    <title>Today in World History</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -29,7 +29,7 @@
           zum Leseverstehen finden Sie außerdem hier.
         </p>
         <div id="photo-attack">
-          <img src="attack-german-unionsoviet.jpg" alt="Ataque alemão 🇩🇪 a União Soviética 🇷🇺">
+          <img src="/img/attack-german-unionsoviet.jpg" alt="Ataque alemão 🇩🇪 a União Soviética 🇷🇺">
           <p> German invasion of the Soviet Union, which was launched on June 22, 1941.</p>
         </div>
         <p>
