📦 NEW: Add demo and flags

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="title">A invasão alemã da União Soviética </div>
       <section class="content">
         <p>
-          <mark>Deutsch perfekt</mark> berichtet über aktuelle Themen – Alltag
+          🇩🇪 <mark>Deutsch perfekt</mark> berichtet über aktuelle Themen – Alltag
           genauso wie Kultur und Gesellschaft – aus Deutschland, Österreich und
           der Schweiz. Alle Texte sind speziell für Deutschlerner geschrieben.
           Erklärungen zu schwierigen Wörtern machen das Leseverstehen einfacher
@@ -33,24 +33,24 @@
           <p> German invasion of the Soviet Union, which was launched on June 22, 1941.</p>
         </div>
         <p>
-          覧宮ミヱコチ投5体イ報佐ヘエクソ罪3影きだぴ剣優ほまいあ嫁郎どこス大百フ購沖る無利ずぜ能鳥妊舌ろリ。隔み次失びど意極べで広収問感い件毎可ぼきけげ就樫県ニヱ情転文アウミチ侮銀ルセ子飛チアフ民智ぱ氏康員ロ第舞レ毎化あ迷女ヲテハ南追彼られ。読レナ仲庁ロシミ特約ムサネフ真氷ル落下9策セイノヒ間83調クツサヤ難7官の員動レごみた毎現づな式本レづで事自僕滞ょ。
+          🇯🇵 覧宮ミヱコチ投5体イ報佐ヘエクソ罪3影きだぴ剣優ほまいあ嫁郎どこス大百フ購沖る無利ずぜ能鳥妊舌ろリ。隔み次失びど意極べで広収問感い件毎可ぼきけげ就樫県ニヱ情転文アウミチ侮銀ルセ子飛チアフ民智ぱ氏康員ロ第舞レ毎化あ迷女ヲテハ南追彼られ。読レナ仲庁ロシミ特約ムサネフ真氷ル落下9策セイノヒ間83調クツサヤ難7官の員動レごみた毎現づな式本レづで事自僕滞ょ。
         </p>
         <p>
-          Лорем ипсум долор сит амет, нец модо еррор салутанди не, но еним
+          🇷🇺 Лорем ипсум долор сит амет, нец модо еррор салутанди не, но еним
           интегре пер, цу оптион перпетуа вих. Утамур тамяуам репудиаре но хис.
           Легере легимус аццоммодаре нец ат, ех вис поссит инермис тибияуе.
           Аугуе доценди ад мел, еум еу цетеро денияуе. Меис малис сигниферумяуе
           еум ад, хас анциллае делицата ин. Еа нам яуас воцент.
         </p>
         <p>
-          My friends and I go to the park. We like to play soccer at the park.
+          🇺🇸 My friends and I go to the park. We like to play soccer at the park.
           On Fridays, we go to the cinema to see a movie. Children don't go to
           school on the weekend. Each day, people go to the hospital when they
           are sick. The doctors and nurses take care of them. The police keep
           everyone safe. I am happy to live in my city.
         </p>
         <p>
-          L’automne débute fin septembre. Durant cette saison, les feuilles des
+          🇫🇷 L’automne débute fin septembre. Durant cette saison, les feuilles des
           arbres tombent et couvrent le sol d’un tapis brun, rouge et jaune. Le
           temps devient de plus en plus frais, il commence à y avoir de la pluie
           et du vent. C’est le moment de sortir son manteau et son parapluie !
