--- a/pages/wars/ww1/index.html
+++ b/pages/wars/ww1/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Today in World History</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <script src="index.js"></script>
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="/index.js"></script>
   </head>
   <body>
     <header>
@@ -28,7 +25,7 @@
     </header>
 
     <main>
-      <div class="title">A invasão alemã da União Soviética</div>
+      <div class="title">A Primeira Guerra Mundial (1914 - 1918)</div>
       <section class="content">
         <p>
           🇩🇪 <mark>Deutsch perfekt</mark> berichtet über aktuelle Themen –
@@ -41,8 +38,8 @@
         </p>
         <div id="photo-attack">
           <img
-            src="/img/attack-german-unionsoviet.jpg"
-            alt="Ataque alemão 🇩🇪 a União Soviética 🇷🇺"
+            src="/img/ww1-mainphoto.webp"
+            alt="Soldados na Primeira Guerra Mundial"
           />
           <p>
             German invasion of the Soviet Union, which was launched on June 22,
@@ -67,6 +64,10 @@
           they are sick. The doctors and nurses take care of them. The police
           keep everyone safe. I am happy to live in my city.
         </p>
+        <img
+            src="/img/ww1-secphoto.jpg"
+            alt="Soldados britânicos na Primeira Guerra Mundial"
+          />
         <p>
           🇫🇷 L’automne débute fin septembre. Durant cette saison, les feuilles
           des arbres tombent et couvrent le sol d’un tapis brun, rouge et jaune.
@@ -113,7 +114,7 @@
           قد بلا دفّة سقوط حكومة, بل فعل وقرى مليون. تعد ان شدّت أعلنت الإمداد,
           هُزم ويكيبيديا هو حين, جدول عُقر كلا لم. أن ا بالولايات وفي. اتّجة
           وعُرفت أن بال, هذه من قِبل لمحاكم. أدنى تطوير بعد ان. قامت نهاية جُل
-          ثم. تسبب العمليات جهة في, بوابة يتسنّى قام أن.
+          ثم. تسبب العمليات جهة في, بوابة يتسنّى قام أن. 🇪🇬
         </p>
       </section>
     </main>
