--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <nav class="topnav" id="myTopnav">
         <a href="#" class="active">TWH</a>
         <a href="#">Breaking News</a>
-        <a href="#">WW2</a>
-        <a href="#">WW1</a>
+        <a href="/pages/wars/ww2/">WW2</a>
+        <a href="/pages/wars/ww1/">WW1</a>
         <a href="#">Wars</a>
         <a href="#">Donate</a>
         <a href="#">About</a>
